styles/output-panel.less
@import "ui-variables";

.output-panel {
	& when (isunit(@font-size, pt)), (isunit(@font-size, px)) {
		font-size: max(@font-size, 12px);
	}

	.resizer {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 4px;
		cursor: row-resize;
		z-index: 10;
	}

	.panel-heading {
		position: relative;
		cursor: default;

		.action-close {
			border: 0 none;
			background: transparent;
			position: absolute;
			top: 0;
			right: 0;
			height: 100%;
			cursor: pointer;

			&::before {
				width: 28px;
				margin-right: 0;
				text-align: center;
				vertical-align: middle;
			}
			&::after {
				content: '';
				display: inline-block;
				height: 100%;
				vertical-align: middle;
			}
		}
	}
	.panel-body {
		height: 100%;
		padding: 4px;
		background: rgba(0,0,0,0.3);
	}

	.terminal {
		background: transparent;

		.xterm-viewport {
			background: transparent;

			&::-webkit-scrollbar-thumb {
				border-color: transparent;
			}
			&::-webkit-scrollbar-track {
				background: transparent;
			}
		}
	}
}

